feat: ajustes nas rotas UA