@@ -2,10 +2,14 @@ package br.edu.ufape.sgi.comunicacao.controllers;
 
 //import br.edu.ufape.sgi.comunicacao.dto.unidadeAdministrativa.UnidadeAdministrativaPatchRequest;
 import java.util.List;
+import java.util.stream.Collectors;
 
+import br.edu.ufape.sgi.comunicacao.dto.unidadeAdministrativa.*;
+import br.edu.ufape.sgi.servicos.interfaces.UnidadeAdministrativaService;
 import org.modelmapper.ModelMapper;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PatchMapping;
@@ -15,9 +19,6 @@ import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
 
-import br.edu.ufape.sgi.comunicacao.dto.unidadeAdministrativa.UnidadeAdministrativaPatchRequest;
-import br.edu.ufape.sgi.comunicacao.dto.unidadeAdministrativa.UnidadeAdministrativaRequest;
-import br.edu.ufape.sgi.comunicacao.dto.unidadeAdministrativa.UnidadeAdministrativaResponse;
 import br.edu.ufape.sgi.exceptions.unidadeAdministrativa.UnidadeAdministrativaNotFoundException;
 import br.edu.ufape.sgi.fachada.Fachada;
 import br.edu.ufape.sgi.models.UnidadeAdministrativa;
@@ -29,7 +30,8 @@ import lombok.RequiredArgsConstructor;
 public class UnidadeAdministrativaController {
     private final Fachada fachada;
     private final ModelMapper modelMapper;
- //codigo quebrada 
+
+
     @PostMapping(value = "/registrar", consumes = "application/json", produces = "application/json")
     public ResponseEntity<UnidadeAdministrativaResponse> salvar(@Valid @RequestBody UnidadeAdministrativaRequest unidadeAdministrativaRequest) throws UnidadeAdministrativaNotFoundException {
         UnidadeAdministrativa unidade = unidadeAdministrativaRequest.convertToEntity(unidadeAdministrativaRequest, modelMapper);
@@ -48,16 +50,35 @@ public class UnidadeAdministrativaController {
         }
     }
 
-
     @GetMapping(value = "/{id}", produces = "application/json")
-    public ResponseEntity<UnidadeAdministrativaResponse> buscarUnidadeAdministrativa(@PathVariable Long id) throws UnidadeAdministrativaNotFoundException {
+    public ResponseEntity<UnidadeAdministrativaGetResponse> buscarUnidadeAdministrativa(@PathVariable Long id) throws UnidadeAdministrativaNotFoundException {
         UnidadeAdministrativa response = fachada.buscarUnidadeAdministrativa(id);
-        return new ResponseEntity<>(new UnidadeAdministrativaResponse(response, modelMapper), HttpStatus.OK);
+        return new ResponseEntity<>(new UnidadeAdministrativaGetResponse(response, modelMapper), HttpStatus.OK);
     }
 
     @GetMapping(value = "/listar", produces = "application/json")
-    public List<UnidadeAdministrativaResponse> listarUnidadesAdministrativas() {
-        return fachada.listarUnidadesAdministrativas().stream().map(unidadeAdministrativa -> new UnidadeAdministrativaResponse(unidadeAdministrativa, modelMapper)).toList();
+    public List<UnidadeAdministrativaGetAllResponse> listarUnidadesAdministrativas() {
+        return fachada.listarUnidadesAdministrativas().stream()
+                .map(unidadeAdministrativa -> new UnidadeAdministrativaGetAllResponse(unidadeAdministrativa, modelMapper))
+                .toList();
+    }
+
+    @GetMapping(value = "/montarArvore", produces  = "application/json")
+    public ResponseEntity<List<UnidadeAdministrativaResponse>> montarArvore() {
+        List<UnidadeAdministrativaResponse> response = fachada.montarArvore().stream()
+                .map(unidade -> new UnidadeAdministrativaResponse(unidade, modelMapper))
+                .collect(Collectors.toList());
+
+        return ResponseEntity.ok(response);
+    }
+
+    @GetMapping(value = "/listarUnidadesFilhas/{id}", produces = "application/json")
+    public ResponseEntity<List<UnidadeAdministrativaGetResponse>> listarUnidadesFilhas(@PathVariable Long id) {
+        List<UnidadeAdministrativaGetResponse> response = fachada.listarUnidadesFilhas(id).stream()
+                .map(unidade -> new UnidadeAdministrativaGetResponse(unidade, modelMapper))
+                .collect(Collectors.toList());
+
+        return new ResponseEntity<>(response, HttpStatus.OK);
     }
 
 
